<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Mis Actividades</string>
    
    <!-- Textos Primera Interfaz -->
    <string name="app_primera_interfaz">Primera Interfaz</string>
    <string name="hint_texto">Introduce el mensaje&#8230;</string>
    <string name="texto_boton">Enviar</string>
    <string name="destinatario">Destinatario</string>
    <string name="travel_info">Información de viajes</string>
    
    <!-- Textos Listas y Adapters -->
    <string name="app_list_activity">Listas y Adapters</string>

    <!-- Textos ListView -->
    <string name="app_listView">List View</string>
    <string name="app_listViewProvider">List View Provider</string>
    <string name="app_name_editar_viaje">Editar nuevo viaje</string>
   	<string name="txt_ciudad">Introducir ciudad:</string>
    <string name="txt_pais">Introducir país:</string>
    <string name="txt_anyo">Introducir año:</string>
    <string name="txt_anotacion">Introducir anotación:</string>
    <string name="txt_boton">Guardar</string>
    
    <string name="ciudad">ciudad</string>
    <string name="pais">país</string>
    <string name="anyo">año</string>
    <string name="anotacion">anotación</string>
    
    <!-- Texto del menu -->
    <string name="action_settings">Configuración</string>
    <string name="nuevo_viaje">Nuevo viaje</string>
    
    <!-- Texto del submenu -->
    <string name="menu_item_modif">Modificar</string>
    <string name="menu_item_delete">Borrar</string>
    <string name="menu_item_send">Compartir</string>

    <!-- Texto Receiver -->
    <string name="app_name_receiver">Receiver</string>
    
    <!-- Texto Sticky -->
    <string name="app_name_sticky">Sticky Intent</string>
    
    <!-- Texto Sticky -->
    <string name="app_name_pending_intent">Pending Intent</string>
    <string name="botontextpending">¡¡NO PULSAR!!</string>
    <string name="textpending">Una vez pulsado el botón, espera 5 segundos para que se ejecute el intent que abrirá la pagina de google</string>
    
    <!-- Texto Telephony Manager -->
    <string name="app_name_telephony">Telephony Manager</string>
    
    <!-- Texto Fragment -->
    <string name="app_name_fragment">Fragment</string>
    
    <!-- Texto Dialog -->
    <string name="app_name_alert_dialog">Alert Dialog</string>
    <string name="text_alert_dialog">Pulsar el botón para mostar el Alert Dialog</string>
    <string name="boton_alert_dialog1">Diálogo Simple</string>
    <string name="boton_alert_dialog2">Diálogo Personlizado</string>
    <string name="dscrImagen">Descripción de imagen</string>
    <string name="dialog_titulo">Selecciona el color del fondo</string>
    <string name="dialog_rb_red">Rojo</string>
    <string name="dialog_rb_green">Verde</string>
    <string name="dialog_rb_blue">Azul</string>
    
    
    <!-- Texto Service -->
    <string name="app_name_operaciones_aritmeticas">Operaciones Aritmeticas (Servicio)</string>
    <string name="labelValue1">Valor 1:</string>
    <string name="labelValue2">Valor 2:</string>
    <string name="labelOperacion">Operación:</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplicacion">*</string>
    <string name="division">/</string>
    <string name="labelSolucion">Solución:</string>
    <string name="labelFactorial">Factorial:</string>
    <string name="txtObtenerFactorial">Obtener</string>
    
    <!-- Texto XML Weather-->
    <string name="app_name_xml_weather">XML Weather</string>
    <string name="label_intro">Información del tiempo XML:</string>
    <string name="label_xml">Texto parseado</string>
    <string name="image_weather">Imagen del tiempo</string>
    
    <!-- Texto Telefonia-->
    <string name="app_name_telefonia">Telefonía</string>
    
    <!-- Texto SMS-->
    <string name="app_name_sms">Mensajes SMS</string>
    <string name="dest">Destinatario</string>
    <string name="message">Mensaje</string>
    <string name="send_intent">Enviar con Intent</string>
    <string name="send_manager">Enviar con Manager</string>
    <string name="send_manager_multiple">Enviar mensaje multiple</string>
    
    <!-- Texto Localizacion-->
    <string name="app_name_localizacion">Localización</string>
    <string name="last_loc">Ultima localizacion</string>
    <string name="get_loc">Solicitar localizacion</string>
    <string name="map">Mapa</string>
    
    <!-- Texto Localizacion-->
    <string name="app_name_alerta_proximidad">Alerta de proximidad</string>
    
</resources>