<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/boton_alert_dialog1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/boton_alert_dialog1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/boton_alert_dialog2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/boton_alert_dialog2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/image_alert_dialog"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@color/Red"
        android:contentDescription="@string/dscrImagen"
        android:src="@drawable/avion" />

</LinearLayout>